fix when text didn't consist whole page in detailvc

--- a/project_eco_find/Base.lproj/Main.storyboard
+++ b/project_eco_find/Base.lproj/Main.storyboard
@@ -374,7 +374,7 @@
                                         <constraints>
                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="273" id="6Eu-nu-vFB"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -510,9 +510,9 @@
                                     <constraint firstAttribute="height" constant="384" id="caR-gQ-uDG"/>
                                     <constraint firstAttribute="width" constant="350" id="gp5-5Y-ej6"/>
                                 </constraints>
-                                <mutableString key="text">Заводы по переработке как правило находятся за городом, плюс они принимают товарные партии вторсырья, там счёт идёт на тонны.  
+                                <string key="text">Заводы по переработке как правило находятся за городом, плюс они принимают товарные партии вторсырья, там счёт идёт на тонны.  
 Некоторые заводы в целом не против принять материалы на переработку и устанавливают контейнеры для вторсырья для тех, кто очень захочет приехать прямо к ним или проезжает по пути. 
-Если вы проводите акцию или хотите организовать раздельный сбор во дворе, в офисе, то вам нужно обращаться к заготовителям (они часто принимают несколько видов вторсырья, накапливают оптовые объемы  в городе и отправляют на переработку).</mutableString>
+Если вы проводите акцию или хотите организовать раздельный сбор во дворе, в офисе, то вам нужно обращаться к заготовителям (они часто принимают несколько видов вторсырья, накапливают оптовые объемы  в городе и отправляют на переработку).</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -828,7 +828,7 @@
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fzk-VA-B4F">
                                                 <rect key="frame" x="45" y="74.5" width="324" height="853"/>
-                                                <mutableString key="text">Заводы-переработчики превращают пластиковые изделия в гранулу из которой можно делать новые изделия. Эти гранулы отправляются на заводы-изготовители товаров, например, из ПЭТ-гранул делают новую ПЭТ-упаковку, полиэфирное волокно, упаковочную ленту, геотекстиль.
+                                                <string key="text">Заводы-переработчики превращают пластиковые изделия в гранулу из которой можно делать новые изделия. Эти гранулы отправляются на заводы-изготовители товаров, например, из ПЭТ-гранул делают новую ПЭТ-упаковку, полиэфирное волокно, упаковочную ленту, геотекстиль.
 
 Из полиэтилена или смеси полиэтилена и полипропилена делают стройматериалы: георешётку, трубы, полимерпесчаную плитку, ящики.
 
@@ -840,7 +840,7 @@
 
 Электронику разбирают на составные части и получают различные металлы, пластики, стекло, которые перерабатываются отдельно.
 
-Стекло превращается в стеклобой, из него производят новое стекло, стекловату, современный стройматериал-пеностекло.</mutableString>
+Стекло превращается в стеклобой, из него производят новое стекло, стекловату, современный стройматериал-пеностекло.</string>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -921,8 +921,8 @@
                                     <constraint firstAttribute="height" constant="469" id="VQh-sb-Upp"/>
                                     <constraint firstAttribute="width" constant="341" id="hl4-dM-NeJ"/>
                                 </constraints>
-                                <mutableString key="text">Из вторичного пластика можно сделать почти (например, кроме пищевой тары, детских игрушек) любые изделия, которые изготавливают и из первичного – так происходит экономия исходных материалов. 
- Исходные материалы для производства стекла (кварцевый песок, известь и сода) и само производство дорого. Стеклобой позволяет сократить их использование до 30%.  Одна тонна переработанной макулатуры уберегает от вырубки полтора десятка деревьев возрастом около 30 лет.  Переработка отходов черных и цветных металлов, или металлолома, имеет огромное экономическое и экологическое значение. Так как при учёте современного индустриального развития мира и объёмов металла, вовлечённого в сферу промышленного использования, становится ясно, что объём металла колоссален, то и объёмы постоянно поступающего в утиль металлолома также весьма велики. </mutableString>
+                                <string key="text">Из вторичного пластика можно сделать почти (например, кроме пищевой тары, детских игрушек) любые изделия, которые изготавливают и из первичного – так происходит экономия исходных материалов. 
+ Исходные материалы для производства стекла (кварцевый песок, известь и сода) и само производство дорого. Стеклобой позволяет сократить их использование до 30%.  Одна тонна переработанной макулатуры уберегает от вырубки полтора десятка деревьев возрастом около 30 лет.  Переработка отходов черных и цветных металлов, или металлолома, имеет огромное экономическое и экологическое значение. Так как при учёте современного индустриального развития мира и объёмов металла, вовлечённого в сферу промышленного использования, становится ясно, что объём металла колоссален, то и объёмы постоянно поступающего в утиль металлолома также весьма велики. </string>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -975,8 +975,8 @@
                                     <constraint firstAttribute="width" constant="338" id="keW-uF-f2o"/>
                                     <constraint firstAttribute="height" constant="251" id="up9-2q-zw6"/>
                                 </constraints>
-                                <mutableString key="text">Все упаковки должны быть сухими и чистыми  от пищевых отходов. Складывать упаковки необходимо компактно, по возможности сжимать тару.
- Этикетки с тары снимать не надо, кроме термоусадочной пвх-плёнки (это когда тара полностью утянута в этикетку). В редких случаях для пластика с маркировкой 05 и 06 нужно снимать этикетки.</mutableString>
+                                <string key="text">Все упаковки должны быть сухими и чистыми  от пищевых отходов. Складывать упаковки необходимо компактно, по возможности сжимать тару.
+ Этикетки с тары снимать не надо, кроме термоусадочной пвх-плёнки (это когда тара полностью утянута в этикетку). В редких случаях для пластика с маркировкой 05 и 06 нужно снимать этикетки.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -1029,11 +1029,11 @@
                                     <constraint firstAttribute="height" constant="474" id="0rf-yZ-OyT"/>
                                     <constraint firstAttribute="width" constant="341" id="CFD-ku-1LB"/>
                                 </constraints>
-                                <mutableString key="text">Теоретичеcки переработать возможно всё. Сложнее всего переработать композитные материалы. 
+                                <string key="text">Теоретичеcки переработать возможно всё. Сложнее всего переработать композитные материалы. 
 
 Чем проще и однороднее структура и чем более распространён продукт, тем проще его переработка.
 
-К сожалению, пока большинство производителей товаров разрабатывают их без учёта последующей утилизации. Для того, чтобы ситуация изменилась, необходима серьёзная перестройка сознания потребителей и производителей и пересмотр законодательной базы. Все товары должны разрабатываться с учётом последующей переработки. Вы можете влиять на это, отправляя производителям любимых товаров просьбы упаковывать их в более простую с точки зрения приёма на переработку упаковку.</mutableString>
+К сожалению, пока большинство производителей товаров разрабатывают их без учёта последующей утилизации. Для того, чтобы ситуация изменилась, необходима серьёзная перестройка сознания потребителей и производителей и пересмотр законодательной базы. Все товары должны разрабатываться с учётом последующей переработки. Вы можете влиять на это, отправляя производителям любимых товаров просьбы упаковывать их в более простую с точки зрения приёма на переработку упаковку.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -1085,7 +1085,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="290" id="nSw-st-jI1"/>
                                 </constraints>
-                                <mutableString key="text">Для раздельного сбора дома нужно две ёмкости: для вторсырья и обычная мусорка для того, что нельзя сдать. В любой квартире найдется место под одну (две) коробки/большие хозяйственные сумки.  Кроме того, мусор можно и нужно уменьшать в объеме: складывать картонные коробки, сжимать алюминиевые, жестяные и пластиковые банки, вставлять один стаканчик  из-под йогурта в другой.</mutableString>
+                                <string key="text">Для раздельного сбора дома нужно две ёмкости: для вторсырья и обычная мусорка для того, что нельзя сдать. В любой квартире найдется место под одну (две) коробки/большие хозяйственные сумки.  Кроме того, мусор можно и нужно уменьшать в объеме: складывать картонные коробки, сжимать алюминиевые, жестяные и пластиковые банки, вставлять один стаканчик  из-под йогурта в другой.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -1139,7 +1139,7 @@
                                     <constraint firstAttribute="height" constant="489" id="aF8-HI-Nj3"/>
                                     <constraint firstAttribute="width" constant="305" id="rji-hL-0Ib"/>
                                 </constraints>
-                                <mutableString key="text">Несмотря на то, что в мире уже сейчас уже есть технологии для переработки 90% бытовых отходов (включая даже подгузники!), в нашей стране многие из них не применяются.  Дело в том, что инфраструктура для раздельного сбора не развита и у потенциальных переработчиков, если они вдруг захотят прийти на наш рынок, нет возможности получать большие партии сырья для загрузки производственных мощностей.  Что же нам делать в сложившейся ситуации? Попытаться предотвратить образование неперерабатываемых отходов в вашем домохозяйстве (находить аналогичные товары в упаковке, которая принимается на переработку). Если ненужную вам вещь еще можно использовать, то вместо того, чтобы сдать/выбросить попробуйте отдать её в одну из организаций, специализирующихся на повторном использовании вещей.</mutableString>
+                                <string key="text">Несмотря на то, что в мире уже сейчас уже есть технологии для переработки 90% бытовых отходов (включая даже подгузники!), в нашей стране многие из них не применяются.  Дело в том, что инфраструктура для раздельного сбора не развита и у потенциальных переработчиков, если они вдруг захотят прийти на наш рынок, нет возможности получать большие партии сырья для загрузки производственных мощностей.  Что же нам делать в сложившейся ситуации? Попытаться предотвратить образование неперерабатываемых отходов в вашем домохозяйстве (находить аналогичные товары в упаковке, которая принимается на переработку). Если ненужную вам вещь еще можно использовать, то вместо того, чтобы сдать/выбросить попробуйте отдать её в одну из организаций, специализирующихся на повторном использовании вещей.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
